force-app/main/default/objects/OA_Enrichment_Pipeline__mdt/OA_Enrichment_Pipeline__mdt.object-meta.xml
<CustomObject>
    <label>OA Enrichment Pipeline</label>
    <pluralLabel>OA Enrichment Pipelines</pluralLabel>
</CustomObject>