force-app/main/default/objects/OA_Enrichment_Pipeline__mdt/fields/Pipeline_Name__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Name__c</fullName>
    <label>Pipeline Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>