force-app/main/default/objects/OA_Enrichment_Pipeline__mdt/fields/Service_Class__c.field-meta.xml
<CustomField>
    <fullName>Service_Class__c</fullName>
    <label>Service Class</label>
    <length>120</length>
    <type>Text</type>
</CustomField>